--- a/ex2.html
+++ b/ex2.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <link rel="stylesheet" href="exer2.css"> 
+        <link rel="stylesheet" href="ex2.css"> 
         <title>Page Title</title>
     </head>
 
