Chore: Modified html and css file

--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="ex2.css"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Layout</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header class="header">
+        <div class="logo">LOGO</div>
+        <nav class="nav-bar">Logo and Navigation Bar</nav>
+    </header>
 
-<html>
-    <head>
-        <link rel="stylesheet" href="ex2.css"> 
-        <title>Page Title</title>
-    </head>
+    <main class="container">
+        <section class="featured-photo">
+            <div class="photo"></div>
+        </section>
 
-    <body>
-        <h1>My First Heading</h1>
-        <p>My first paragraph.</p>
-    </body>
+        <section class="projects">
+            <h2>Previous Projects</h2>
+            <div class="project-list">
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+            </div>
+        </section>
 
-</html> 
+        <section class="skills-autobiography">
+            <div class="skills">
+                <h2>Skills</h2>
+                <div class="content-box"></div>
+            </div>
+            <div class="autobiography">
+                <h2>Autobiography</h2>
+                <div class="content-box"></div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-logo"></div>
+        <div class="footer-content">
+            <p>Footer Contents</p>
+            <p>Logo, Address / Contact Information, and Personal Website</p>
+            <p>Copyright Information</p>
+            <a href="#" class="back-to-top">Back to Top</a>
+        </div>
+    </footer>
+</body>
+</html>
